deploy/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hrm
  labels:
    app.kubernetes.io/part-of: hrm
